tests/error/err-uninit-vars-1.scm
(letrec
  ([a 4][b a])
  b)
